--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-google-login": "^5.1.20",
+    "react-helmet": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5"
