--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webinar-front",
   "version": "0.1.0",
+  "homepage": "https://webosium.xyz",
   "private": true,
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.2.0",
@@ -17,6 +18,7 @@
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-snap": "^1.23.0",
     "react-toastify": "^6.0.5"
   },
   "scripts": {
@@ -25,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
-    "watch:css": "postcss src/styles/tailwind.css -o src/styles/main.css"
+    "watch:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
