--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
+    "react-ga": "^2.7.0",
     "react-google-login": "^5.1.20",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.2.0",
