--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-ga": "^2.7.0",
     "react-google-login": "^5.1.20",
     "react-helmet": "^6.0.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5"
